crates/artemis_domain/src/transformer/snapshots/artemis_domain__transformer__set_model__tests__set_model_affects_all_text_messages.snap
---
source: crates/artemis_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)_all_text
before:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: Assistant
        content: Assistant message
    - text:
        role: User
        content: User message
after:
  messages:
    - text:
        role: System
        content: System message
        model: gpt-4
    - text:
        role: Assistant
        content: Assistant message
        model: gpt-4
    - text:
        role: User
        content: User message
        model: gpt-4
